--- a/templates/count/attestationMail.html.twig
+++ b/templates/count/attestationMail.html.twig
@@ -1,16 +1,16 @@
-{% extends 'count/layout.html.twig' %}
+{% extends 'count/layoutMail.html.twig' %}
 
 {% block title %}Attestation de paiement{% endblock %}
 
 {% block body %}
-
+{# {% apply inky_to_html %} #}
  <div class="container">
+ 
  <div class="alert alert-info">
  <div class="well">
  <ul>
 
 <caption class="well well-sm"><h2> Attestation de paiement</h2></caption>
-
     <table>
             <tr>
                 <th class="well well-sm">Nom:</th>
@@ -20,7 +20,6 @@
             </tr>
     
     </table>
-
     <table>
             <tr>
                 <th class="well">Nature paiement </th>
@@ -42,15 +41,26 @@
             {% endfor %}
          
     </table>  
+      <div class="card w-100 mb-4">
+    <div class="card-body">
+      <svg class="bi bi-people-fill" width="3em" height="3em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
+</svg>
+      <h4 class="text-center">Payer ses cotisations est désormais facile au FPI</h4>
+      <p class="text-center">Pour être valide, cette attestation doit être tamponné et signé par votre secrétaire de section</p>
+      <a class="btn btn-primary btn-lg mx-auto mt-2" href="https://fpiinscription.com">FPI-France/Sections ARA</a>
+    </div>
+  </div>
 </ul>
 </div>
 </div>
     </div>
     <div class="container">
+{# {% endapply %} #}
+
   <div class="row">
     <div class="col text-center">
-      <a href="{{ path('home') }}"><p><h4><span class="label label-success">Retour</span></h4></p></a>
-      <a href="{{ path('sendmail_sendattestation') }}"><p><h4><span class="label label-info">Recevoir votre attestation par email</span></h4></p></a>
+      <a href="https://fpiinscription.com"><p><h4><span class="label label-success">Retour</span></h4></p></a>
 
     </div>
   </div>
