--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -2,8 +2,11 @@
 
 <ul id="menu-accordeon">
    <li><a href="#">REPRESENTATION</a>
+   <li><a href="#">Sections ARA</a>
             <ul>
-               <li><a href="#">Bureau</a></li>
+               <li><a href="#">Section 1 Lyon</a></li>
+               <li><a href="#">Section 2 Lyon</a></li>
+               <li><a href="#">Section 3 Grenoble</a></li>
             </ul>
    </li>
    <li><a href="#">Etre sympathisant</a>
