--- a/public/assets/css/email.css
+++ b/public/assets/css/email.css
@@ -1,12 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f3f3f3;
+    background-color: #97c3f5;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 h1 {
-    background-color: #264459;
+    background-color: #b4d6ee;
     color: #ffffff;
     /*padding: 30px 0 50px 0;*/
     font-weight: normal;
